--- a/app/assets/templates/mobile/finish.jst.ejs.erb
+++ b/app/assets/templates/mobile/finish.jst.ejs.erb
@@ -1,20 +1,17 @@
-<div ng-controller="mobileQuestionnaireController" ng-init="init()">
+<div ng-controller="mobileQuestionnaireController" class="mobile-interact-page" ng-init="init()">
+    <div class="mobile-header" ></div>
   <div class='mobile-content' id="main_container">
-    <div class="mobile-header-title-n" ></div>
-    <div class='page_content'>
-      <div class="logo-mobile-finish">
+    <div class='page_content mobile-interact-page-content'>
+      <div class="large-logo-mobile">
         <img src="<%= asset_path 'logo-medium.png' %>"  width="100%">
       </div>
       <h1 class='page_title'><%= I18n.t('questionnaire.thank_you') %></h1>
       <div class='text'>
         <%= I18n.t('questionnaire.thank_you_note')  %>
       </div>
-      <div class="additional_questions-btn">
-        <a href="https://singuser14e5e99e.fra1.qualtrics.com/jfe/form/SV_8FWy0xomcTfYfTD?id={{getParticipantId()}}">לחץ כאן למענה על מס' שאלות נוספות</a>
+      <div class="interact-page-primary-btn">
+        <a href="https://singuser14e5e99e.fra1.qualtrics.com/jfe/form/SV_8FWy0xomcTfYfTD?id={{getParticipantId()}}"><%= I18n.t('questionnaire.click_to_answer_additional_questions')  %></a>
       </div>
-      <!-- <div style="direction: rtl; border: solid orange 2px; width: 340px; height: 120px; font-size: 36px; margin: 40px auto; text-algin: center;"> -->
-        <!-- <a style="margin: 0 auto; color: black; text-decoration: none; line-height: 1.5; padding: 10px; float: right;" href="https://singuser14e5e99e.fra1.qualtrics.com/jfe/form/SV_8FWy0xomcTfYfTD?id={{getParticipantId()}}">לחץ כאן למענה על מס' שאלות נוספות</a> -->
-      <!-- </div> -->
       <div class='foot'>
         <span>Powered by</span>
         <img src="<%= asset_path 'logo-medium.png' %>" height="75" width="308">
