--- a/app/assets/templates/mobile/welcome_back.jst.ejs.erb
+++ b/app/assets/templates/mobile/welcome_back.jst.ejs.erb
@@ -1,33 +1,60 @@
-<div ng-if="mobile_app_service.isLangRtl()" dir='rtl' class='welcome-back-page-warper' ng-controller="welcomeBackController" ng-init="init()" >
+<div ng-if="mobile_app_service.isLangRtl()" dir='rtl' class='mobile-interact-page welcome-back-page-warper' ng-controller="mobileQuestionnaireController" ng-init="init()" >
+  <div class="mobile-header">
+    <div class="mobile-header-title"  ng-bind-html='r.question_title'></div>
+    <div class="mobile-header-page-num">
+      {{mobile_app_service.getIndexOfCurrentQuestion()}}/{{mobile_app_service.getTotalQuestions()}}
+    </div>
+    <div class="mobile_search_click" ng-click='toggleFullQuestionView()'>Q</div>
+  </div>
 
   <div class='mobile-content' id="main_container">
-    <div class='page_content welcome'>
-      <h1 class='page_title'><%= I18n.t('questionnaire.welcome_back') %> {{mobile_app_service.getUserName()}},</h1>
+    <div class='page_content welcome mobile-interact-page-content'>
+      <div class="large-logo-mobile">
+        <img src="<%= asset_path 'logo-medium.png' %>"  width="100%">
+      </div>
+      <h1 class='page_title'><%= I18n.t('questionnaire.welcome_back') %> {{mobile_app_service.getUserName()}}</h1>
       <div class='text'>
-        <%= I18n.t('questionnaire.you_are_in_html') %> {{mobile_app_service.getIndexOfCurrentQuestion()}}</b>. <br><br>
-        <%= I18n.t('questionnaire.click_the_continue')  %>.
+        <%= I18n.t('questionnaire.you_are_in_html') %> {{mobile_app_service.getIndexOfCurrentQuestion()}}
+      </div>
+      <div class="interact-page-primary-btn" ng-click="mobile_app_service.setQuestionnaireView()">
+        <%= I18n.t('questionnaire.continue_answer_next_question') %>
+      </div>
+      <div class="saved-location-text">
+        <%= I18n.t('questionnaire.saved_location_message') %>
+      </div>
+      <div class='foot'>
+        <img src="<%= asset_path 'logo-medium.png' %>" height="75" width="308">
+        <span>Powered by</span>
       </div>
     </div>
   </div>
-  <div class='mobile-footer'>
+<!--   <div class='mobile-footer'>
     <div class='mobile-btns-container'>
-      <div class="center-button-wide" ng-click="mobile_app_service.setQuestionnaireView()"><%= I18n.t('questionnaire.continue_saved_session_button') %></div>
+      <div class="center-button-wide" ng-click="mobile_app_service.setQuestionnaireView()"><%#= I18n.t('questionnaire.continue_saved_session_button') %></div>
     </div>
-  </div>
+  </div> -->
 </div>
-<div ng-if="!mobile_app_service.isLangRtl()" class='welcome-back-page-warper' ng-controller="welcomeBackController" ng-init="init()" >
+
+<div ng-if="!mobile_app_service.isLangRtl()" class='mobile-interact-page welcome-back-page-warper' ng-controller="mobileQuestionnaireController" ng-init="init()" >
   <div class='mobile-content' id="main_container">
-    <div class='page_content welcome'>
-      <h1 class='page_title'><%= I18n.t('questionnaire.welcome_back') %> {{mobile_app_service.getUserName()}},</h1>
-      <div class='text'>
-        <%= I18n.t('questionnaire.you_are_in_html') %> {{mobile_app_service.getIndexOfCurrentQuestion()}}</b>. <br><br>
-        <%= I18n.t('questionnaire.click_the_continue')  %>.
+    <div class='page_content welcome mobile-interact-page-content'>
+      <div class="large-logo-mobile">
+        <img src="<%= asset_path 'logo-medium.png' %>"  width="100%">
       </div>
-    </div>
-  </div>
-  <div class='mobile-footer'>
-    <div class='mobile-btns-container'>
-      <div class="center-button-wide" ng-click="mobile_app_service.setQuestionnaireView()"><%= I18n.t('questionnaire.continue_saved_session_button') %></div>
+      <h1 class='page_title'><%= I18n.t('questionnaire.welcome_back') %> {{mobile_app_service.getUserName()}}</h1>
+      <div class='text'>
+        <%= I18n.t('questionnaire.you_are_in_html') %> {{mobile_app_service.getIndexOfCurrentQuestion()}}
+      </div>
+      <div class="interact-page-primary-btn" ng-click="mobile_app_service.setQuestionnaireView()">
+        <%= I18n.t('questionnaire.continue_answer_next_question') %>
+      </div>
+      <div class="saved-location-text">
+        <%= I18n.t('questionnaire.saved_location_message') %>
+      </div>
+      <div class='foot'>
+        <img src="<%= asset_path 'logo-medium.png' %>" height="75" width="308">
+        <span>Powered by</span>
+      </div>
     </div>
   </div>
 </div>
