--- a/app/assets/stylesheets/mobile/common.scss
+++ b/app/assets/stylesheets/mobile/common.scss
@@ -10,7 +10,7 @@ body
   height: 100%;
   line-height: 18px;
   margin: 0  !important;
-  position: absolute;
+  position: fixed;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
