--- a/app/assets/stylesheets/mobile/mobile.scss
+++ b/app/assets/stylesheets/mobile/mobile.scss
@@ -64,7 +64,7 @@
   }
   .mobile-container {
     height: 100%;
-    width: 90%;
+    width: 99%;
     position: absolute;
     right: 0;
     left: 0;
@@ -80,7 +80,8 @@
         box-sizing: border-box;
         float: left;
         color: #fff;
-        font-size: 45px;
+        /*font-size: 45px;*/
+        font-size: 30pt;
         line-height: 140px;
         text-shadow: 0 1px 1px rgba(0, 0, 1, 0.19);
       }
