page name,and first_enter

--- a/app/assets/templates/mobile/first_enter.jst.ejs.erb
+++ b/app/assets/templates/mobile/first_enter.jst.ejs.erb
@@ -3,7 +3,7 @@
   <div class='mobile-content' id="main_container" >
     <div class='page_content'>
       <div class="welcome-message" style='width: {{container_width}}; height: {{container_height}}' >
-        <h1 class='page_title' dir='rtl'><%= I18n.t('questionnaire.hi') %> {{mobile_app_service.getUserName()}},</h1>
+        <h1 class='page_title' dir='rtl'><%= I18n.t('questionnaire.hi') %> {{mobile_app_service.getUserName()}}</h1>
         <div class="text_rtl" dir='rtl'><%= I18n.t('questionnaire.how_to_answer_html') %></div>
         <div class="gestures">
           <div class="gesture-line">
