--- a/app/views/layouts/mobile_application.erb
+++ b/app/views/layouts/mobile_application.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
-    <title>MobileWorkships</title>
+    <title>MobileStepAhead</title>
     <%= stylesheet_link_tag    'mobile', media: 'all'%>
     <%= javascript_include_tag 'mobile'%>
     <%= csrf_meta_tags %>
