--- a/app/assets/templates/mobile/questionnaire.jst.ejs.erb
+++ b/app/assets/templates/mobile/questionnaire.jst.ejs.erb
@@ -13,22 +13,33 @@
   </div>
   
   <div class='mobile-content' id="main_container" ng-class="{'finish-question': isFinished() && isLoaded()}">
-    <div class='question-instruction-tooltip' ng-click='toggleFullQuestionView()'>
-      <div class='full-question-blocker-show' ng-class="!show_full_question && 'full-question-blocker-hide'"></div>
+    <div class='question-instruction-tooltip' ng-click='hidePopup()'>
+      <div class='full-question-blocker-show' ng-class="(!show_full_question && !show_popup) && 'full-question-blocker-hide'"></div>
       <div class='question-container' ng-class="show_full_question && 'question-container-display'">
         <div ng-if="mobile_app_service.isLangRtl()" class='question' dir='rtl'><bdi ng-bind-html='r.question'></bdi></div>
         <div ng-if="!mobile_app_service.isLangRtl()" class='question'><bdi ng-bind-html='r.question'></bdi></div>
         <div class='close-btn'><%= I18n.t('questionnaire.close_button') %></div>
       </div>
+      <div class="genericPopUp confirm-box" ng-class="{'confirm-box-display': isChoseBySearch(),'genericPopUp-rtl': mobile_app_service.isLangRtl()}">
+        <div class="subject">
+          <span><%= I18n.t('questionnaire.are_you_sure')%></span>
+          <span>{{getChosenEmployee()}}? </span>
+        </div>
+        <div class="popup-buttons">
+          <div class= "actions-btn ok-btn" ng-click="onSelect()">אישור</div>
+          <div class="actions-btn cancel-btn" ng-click="onCancel()">ביטול</div>
+        </div>
+      </div>
+
     </div>
     <div ng-show='!isFinished() && isLoaded()'>
       <div class="mobile_search_container" ng-if='display_search()'>
         <div class='mobile_search_tab'>
-          <input ng-if="!mobile_app_service.isLangRtl()" class='mobile_search_text' type='text' placeholder="<%= I18n.t('questionnaire.search')%>" ng-model="search_input.text" typeahead="search_node.name for search_node in search_list() | filter:$viewValue |  limitTo:5" typeahead-on-select='onSelect($item); search_input.text=""'/>        
+          <input ng-if="!mobile_app_service.isLangRtl()" class='mobile_search_text' type='text' placeholder="<%= I18n.t('questionnaire.search')%>" ng-model="search_input.text" typeahead="search_node.name for search_node in search_list() | filter:$viewValue |  limitTo:5" typeahead-on-select='showConfirmBox($item,r.question_id); search_input.text=""'/>        
           <div class="mobile_search_img_container" ng-click='clearSearch()'>
             <img class='mobile_search_img' alt="clear" src="<%= asset_path 'x.png' %>"/>
           </div>
-          <input ng-if="mobile_app_service.isLangRtl()" dir='rtl' class='mobile_search_text_rtl' type='text' placeholder="<%= I18n.t('questionnaire.search')%>" ng-model="search_input.text" typeahead="search_node.name for search_node in search_list() | filter:$viewValue |  limitTo:5" typeahead-on-select='onSelect($item); search_input.text=""'/>
+          <input ng-if="mobile_app_service.isLangRtl()" dir='rtl' class='mobile_search_text_rtl' type='text' placeholder="<%= I18n.t('questionnaire.search')%>" ng-model="search_input.text" typeahead="search_node.name for search_node in search_list() | filter:$viewValue |  limitTo:5" typeahead-on-select='showConfirmBox($item,r.question_id); search_input.text=""'/>
         </div>
       </div>
       <slot-machine-directive height='{{heightOfContainer}}' value='currentlyFocusedEmployeeId' on-select-class="zoom" swipe='swipe' loaded='isLoaded()' load-more='loadMore'>
