fix logo url - mobile & referral_btn_url in desktop

--- a/app/assets/templates/mobile/finish.jst.ejs.erb
+++ b/app/assets/templates/mobile/finish.jst.ejs.erb
@@ -3,7 +3,7 @@
   <div class='mobile-content' id="main_container">
     <div class='page_content mobile-interact-page-content'>
       <div class="large-logo-mobile">
-        <img src="{{logoSrc()}}"  width="100%">
+        <img ng-src="{{logoSrc()}}"  width="100%">
         <%#= asset_path 'logo-medium.png' %>
       </div>
       <div style="display:none;" id='close_title' data-close-title="<%= I18n.t('questionnaire.thank_you') %>"></div>
