--- a/app/assets/templates/mobile/desktop.jst.ejs.erb
+++ b/app/assets/templates/mobile/desktop.jst.ejs.erb
@@ -19,7 +19,8 @@
         <div class="thank-you"><%= I18n.t('questionnaire.thank_you') %>, {{getEmployee(current_emp_id).name}}</div>
         <div class="thank-you-p"><%= I18n.t('questionnaire.thank_you_note') %></div>
         <div style="direction: rtl; border: solid orange 2px; width: 258px; height: 120px; font-size: 30px; margin: 40px auto; text-algin: center;">
-          <a style="margin: 0 auto; color: black; text-decoration: none; line-height: 1.5; padding: 10px; float: right;" href="https://singuser14e5e99e.fra1.qualtrics.com/jfe/form/SV_8FWy0xomcTfYfTD?id={{token}}">לחץ כאן למענה על מס' שאלות נוספות</a>
+          <a style="margin: 0 auto; color: black; text-decoration: none; line-height: 1.5; padding: 10px; float: right;" ng-href="{{referralUrl()}}">
+            <%= I18n.t('questionnaire.click_to_answer_additional_questions')  %></a>
         </div>
         <div class="logo-sm"> <img src="<%= asset_path 'logo-medium.png' %>" height="25" width="103"> </div>
       </div>
@@ -107,7 +108,8 @@
         <div class="thank-you" dir='rtl'><%= I18n.t('questionnaire.thank_you') %> {{getEmployee(current_emp_id).name}},</div>
         <div class="thank-you-p"><%= I18n.t('questionnaire.thank_you_note') %></div>
         <div style="direction: rtl; border: solid orange 2px; width: 258px; height: 120px; font-size: 30px; margin: 40px auto; text-algin: center;">
-          <a style="margin: 0 auto; color: black; text-decoration: none; line-height: 1.5; padding: 10px; float: right;" href="https://singuser14e5e99e.fra1.qualtrics.com/jfe/form/SV_8FWy0xomcTfYfTD?id={{token}}">לחץ כאן למענה על מס' שאלות נוספות</a>
+          <a style="margin: 0 auto; color: black; text-decoration: none; line-height: 1.5; padding: 10px; float: right;" ng-href="{{referralUrl()}}">
+            <%= I18n.t('questionnaire.click_to_answer_additional_questions')  %></a>
         </div>
         <div class="logo-sm"> <img src="<%= asset_path 'logo-medium.png' %>" height="25" width="103"> </div>
       </div>
