--- a/app/views/layouts/mobile_application.erb
+++ b/app/views/layouts/mobile_application.erb
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
+    <!-- <meta name='viewport' content='width=device-width, initial-scale=0.38, maximum-scale=0.38,  user-scalable=0' > -->
+    <meta name='viewport' content='user-scalable=0' >
     <title>MobileStepAhead</title>
     <%= stylesheet_link_tag    'mobile', media: 'all'%>
     <%= javascript_include_tag 'mobile'%>
