--- a/app/assets/templates/mobile/questionnaire.jst.ejs.erb
+++ b/app/assets/templates/mobile/questionnaire.jst.ejs.erb
@@ -26,8 +26,8 @@
           <span>{{getChosenEmployee()}}? </span>
         </div>
         <div class="popup-buttons">
-          <div class= "actions-btn ok-btn" ng-click="onSelect()">אישור</div>
-          <div class="actions-btn cancel-btn" ng-click="onCancel()">ביטול</div>
+          <div class= "actions-btn ok-btn" ng-click="onSelect()"><%= I18n.t('questionnaire.ok')%></div>
+          <div class="actions-btn cancel-btn" ng-click="onCancel()"><%= I18n.t('questionnaire.cancel')%></div>
         </div>
       </div>
 
