--- a/app/assets/stylesheets/mobile/mobile.scss
+++ b/app/assets/stylesheets/mobile/mobile.scss
@@ -371,6 +371,7 @@
         margin-left: auto;
         font-size: 36pt;
         font-weight: bold;
+        line-height: 1.5;
         a{
           color: black;
           text-decoration: none;
