--- a/app/assets/templates/mobile/desktop.jst.ejs.erb
+++ b/app/assets/templates/mobile/desktop.jst.ejs.erb
@@ -2,13 +2,13 @@
 
   <div ng-if='mobile_app_service.inWelcomeBackView() || mobile_app_service.inFirstEnterView()'>
     <div class="logo-medium"> <img src="<%= asset_path 'logo-medium.png' %>" height="63" width="257"> </div>
-    <div class="welcome-back" ng-show='mobile_app_service.inWelcomeBackView()' ><%= I18n.t('questionnaire.welcome_back') %>, {{getEmployee(current_emp_id).name}}</div>
-    <div class="welcome-back" ng-show='mobile_app_service.inFirstEnterView()'><%= I18n.t('questionnaire.welcome') %>, {{getEmployee(current_emp_id).name}}</div>
-    <div class="welcome-p" ><%= I18n.t('questionnaire.welcome_sentence') %></div>
+    <div class="welcome-back" ng-show='mobile_app_service.inWelcomeBackView()' > {{mobile_app_service.t("welcome_back")}}<%#= I18n.t('questionnaire.welcome_back') %>, {{getEmployee(current_emp_id).name}}</div>
+    <div class="welcome-back" ng-show='mobile_app_service.inFirstEnterView()'> {{mobile_app_service.t("welcome")}}<%#= I18n.t('questionnaire.welcome') %>, {{getEmployee(current_emp_id).name}}</div>
+    <div class="welcome-p" >{{mobile_app_service.t("welcome_sentence")}}<%#= I18n.t('questionnaire.welcome_sentence') %></div>
 
     <div class='start-button btn-continue' ng-click="mobile_app_service.setQuestionnaireView()">
-      <div class='title' ng-show='mobile_app_service.inWelcomeBackView()' ><%= I18n.t('questionnaire.resume') %></div>
-      <div class='title' ng-show='mobile_app_service.inFirstEnterView()' ><%= I18n.t('questionnaire.start') %></div>
+      <div class='title' ng-show='mobile_app_service.inWelcomeBackView()' >{{mobile_app_service.t("resume")}}<%#= I18n.t('questionnaire.resume') %></div>
+      <div class='title' ng-show='mobile_app_service.inFirstEnterView()' >{{mobile_app_service.t("start")}}<%#= I18n.t('questionnaire.start') %></div>
       <div class='right-arrow'></div>
     </div>
   </div>
@@ -16,11 +16,11 @@
   <div>
     <div ng-if='mobile_app_service.inFinishView()' >
       <div class="background">
-        <div class="thank-you"><%= I18n.t('questionnaire.thank_you') %></div>
-        <div class="thank-you-p"><%= I18n.t('questionnaire.thank_you_note') %></div>
-        <div style="direction: rtl; border: solid orange 2px; width: 258px; height: 120px; font-size: 30px; margin: 40px auto; text-algin: center;">
-          <a style="margin: 0 auto; color: black; text-decoration: none; line-height: 1.5; padding: 10px; float: right;" ng-href="{{referralUrl()}}">
-            <%= I18n.t('questionnaire.click_to_answer_additional_questions')  %></a>
+        <div class="thank-you">{{mobile_app_service.t("thank_you")}}<%#= I18n.t('questionnaire.thank_you') %></div>
+        <div class="thank-you-p">{{mobile_app_service.t("thank_you_note")}}<%#= I18n.t('questionnaire.thank_you_note') %></div>
+        <div style="direction: rtl; border: solid orange 2px; width: 258px; height: 120px; font-size: 24px; margin: 40px auto;">
+          <a style="margin: 0 auto; color: black; text-decoration: none; line-height: 1.5; padding: 10px; float: right; text-align: center;" ng-href="{{referralUrl()}}">
+            {{mobile_app_service.t("click_to_answer_additional_questions")}}<%#= I18n.t('questionnaire.click_to_answer_additional_questions')  %></a>
         </div>
         <div class="logo-sm"> <img src="<%= asset_path 'logo-medium.png' %>" height="25" width="103"> </div>
       </div>
@@ -48,27 +48,27 @@
         <div class="question-num" ng-bind-html='question_title'></div>
         <div class='question-p'> {{question}} </div>
         <div class='q-button btn-continue' ng-click="sendAnswers('<%= @name %>','<%= @token %>')">
-          <div class='title'><%= I18n.t('questionnaire.continue_button') %></div>
+          <div class='title'>{{mobile_app_service.t("continue_button")}}<%#= I18n.t('questionnaire.continue_button') %></div>
           <div class='right-arrow'></div>
         </div>
       </div>
       <div class='error-message-desktop'>
-        <div ng-show='selected_less_then_minimum || maximum_required < selected_workers.length' ><%= I18n.t('questionnaire.must_select') %> {{minimum_required}} <%= I18n.t('questionnaire.people_to_continue') %>
+        <div ng-show='selected_less_then_minimum || maximum_required < selected_workers.length' >{{mobile_app_service.t("must_select")}}<%#= I18n.t('questionnaire.must_select') %> {{minimum_required}} {{mobile_app_service.t("people_to_continue")}}<%#= I18n.t('questionnaire.people_to_continue') %>
         </div>
       </div>
     </div>
 
     <div class='selected-content-wrapper' stretch>
       <div class='select-left-panel'>
-        <div class='selected-title'><%= I18n.t("questionnaire.selected") %></div>
+        <div class='selected-title'>{{mobile_app_service.t("selected")}}<%#= I18n.t("questionnaire.selected") %></div>
         <div class='questions-wrapper'>
           <div class='question-out-of-questions'> {{numOfReplies()}} </div>
           <div class='total-questions'>/{{maximum_required}} </div>
-          <div class="clear-btn" ng-click='clearSelection()'><%= I18n.t('questionnaire.clear_selection') %></div>
+          <div class="clear-btn" ng-click='clearSelection()'>{{mobile_app_service.t("clear_selection")}}<%#= I18n.t('questionnaire.clear_selection') %></div>
         </div>
         <div class='search-tab search-desktop' ng-if='display_search()'>
           <img class='search-img' ng-click='clearSearch()' alt="clear" src="<%= asset_path 'clear_search.png' %>"/>
-          <input  class='search-input-field' placeholder='<%= I18n.t("questionnaire.find_employees") %>...' type='text' ng-model="search_input.text" typeahead="search_node.name for search_node in search_list() | nameStartWith:$viewValue | limitTo:10"  typeahead-on-select='select_worker($item, true)'/>
+          <input  class='search-input-field' placeholder="{{mobile_app_service.t('search')}}..." type='text' ng-model="search_input.text" typeahead="search_node.name for search_node in search_list() | nameStartWith:$viewValue | limitTo:10"  typeahead-on-select='select_worker($item, true)'/>
         </div>
         <div class='selected-employees'>
           <div class='pillbox-wrapper' ng-repeat='worker in replies'>
@@ -93,23 +93,23 @@
 <div ng-if='mobile_app_service.isLangRtl()' class="background" >
   <div ng-if='mobile_app_service.inWelcomeBackView() || mobile_app_service.inFirstEnterView()' dir='rtl'>
     <div class="logo-medium"> <img src="<%= asset_path 'logo-medium.png' %>" height="63" width="257"> </div>
-    <div class="welcome-back" ng-show='mobile_app_service.inWelcomeBackView()' ><%= I18n.t('questionnaire.welcome_back') %> {{getEmployee(current_emp_id).name}},</div>
-    <div class="welcome-back" ng-show='mobile_app_service.inFirstEnterView()'><%= I18n.t('questionnaire.welcome') %> {{getEmployee(current_emp_id).name}},</div>
-    <div class="welcome-p" ><%= I18n.t('questionnaire.welcome_sentence') %></div>
+    <div class="welcome-back" ng-show='mobile_app_service.inWelcomeBackView()' >{{mobile_app_service.t("welcome_back")}}<%#= I18n.t('questionnaire.welcome_back') %> {{getEmployee(current_emp_id).name}},</div>
+    <div class="welcome-back" ng-show='mobile_app_service.inFirstEnterView()'>{{mobile_app_service.t("welcome")}}<%#= I18n.t('questionnaire.welcome') %> {{getEmployee(current_emp_id).name}},</div>
+    <div class="welcome-p" ng-bind-html='mobile_app_service.t("welcome_sentence")'><%#= I18n.t('questionnaire.welcome_sentence') %></div>
     <div class='start-button btn-continue' ng-click="mobile_app_service.setQuestionnaireView()">
       <div class='left-arrow'></div>
-      <div class='title' ng-show='mobile_app_service.inWelcomeBackView()' ><%= I18n.t('questionnaire.resume') %></div>
-      <div class='title' ng-show='mobile_app_service.inFirstEnterView()' ><%= I18n.t('questionnaire.start') %></div>
+      <div class='title' ng-show='mobile_app_service.inWelcomeBackView()' >{{mobile_app_service.t("resume")}}<%#= I18n.t('questionnaire.resume') %></div>
+      <div class='title' ng-show='mobile_app_service.inFirstEnterView()' >{{mobile_app_service.t("start")}}<%#= I18n.t('questionnaire.start') %></div>
     </div>
   </div>
   <div>
     <div ng-if='mobile_app_service.inFinishView()' >
       <div class="background">
-        <div class="thank-you" dir='rtl'><%= I18n.t('questionnaire.thank_you') %></div>
-        <div class="thank-you-p"><%= I18n.t('questionnaire.thank_you_note') %></div>
-        <div style="direction: rtl; border: solid orange 2px; width: 258px; height: 120px; font-size: 30px; margin: 40px auto; text-algin: center;">
-          <a style="margin: 0 auto; color: black; text-decoration: none; line-height: 1.5; padding: 10px; float: right;" ng-href="{{referralUrl()}}">
-            <%= I18n.t('questionnaire.click_to_answer_additional_questions')  %></a>
+        <div class="thank-you" dir='rtl'>{{mobile_app_service.t("thank_you")}}<%#= I18n.t('questionnaire.thank_you') %></div>
+        <div class="thank-you-p">{{mobile_app_service.t("thank_you_note")}}<%#= I18n.t('questionnaire.thank_you_note') %></div>
+        <div style="direction: rtl; border: solid orange 2px; width: 258px; height: 120px; font-size: 24px; margin: 40px auto; text-algin: center;">
+          <a style="margin: 0 auto; color: black; text-decoration: none; line-height: 1.5; padding: 10px; float: right;text-align: center;" ng-href="{{referralUrl()}}">
+            {{mobile_app_service.t("click_to_answer_additional_questions")}}<%#= I18n.t('questionnaire.click_to_answer_additional_questions')  %></a>
         </div>
         <div class="logo-sm"> <img src="<%= asset_path 'logo-medium.png' %>" height="25" width="103"> </div>
       </div>
@@ -139,11 +139,11 @@
         <div class='question-p-rtl'> {{question}} </div>
         <div class='q-button-rtl btn-continue-rtl' ng-click="sendAnswers('<%= @name %>','<%= @token %>')">
           <div class='left-arrow'></div>
-          <div class='title'><%= I18n.t('questionnaire.continue_button') %></div>
+          <div class='title'>{{mobile_app_service.t("continue_button")}}<%#= I18n.t('questionnaire.continue_button') %></div>
         </div>
       </div>
       <div class='error-message-desktop-rtl'>
-        <div ng-show='selected_less_then_minimum || maximum_required < selected_workers.length' ><%= I18n.t('questionnaire.must_select') %> {{minimum_required}} <%= I18n.t('questionnaire.people_to_continue') %>
+        <div ng-show='selected_less_then_minimum || maximum_required < selected_workers.length' >{{mobile_app_service.t("must_select")}}<%#= I18n.t('questionnaire.must_select') %> {{minimum_required}} {{mobile_app_service.t("people_to_continue")}}<%#= I18n.t('questionnaire.people_to_continue') %>
         </div>
       </div>
     </div>
@@ -153,12 +153,12 @@
         <div class='questions-wrapper'>
           <div class='total-questions'>{{maximum_required}}/</div>
           <div class='question-out-of-questions'>{{selected_workers.length}}</div>
-          <div class="clear-btn" ng-click='clearSelection()'><%= I18n.t('questionnaire.clear_selection') %></div>
+          <div class="clear-btn" ng-click='clearSelection()'>{{mobile_app_service.t("clear_selection")}}<%#= I18n.t('questionnaire.clear_selection') %></div>
         </div>
-        <div class='selected-title'><%= I18n.t("questionnaire.selected") %></div>
+        <div class='selected-title'>{{mobile_app_service.t("selected")}}<%#= I18n.t("questionnaire.selected") %></div>
         <div class='search-tab search-desktop' ng-if='display_search()'>
           <img class='search-img-rtl' ng-click='clearSearch()' alt="clear" src="<%= asset_path 'clear_search.png' %>"/>
-          <input class='search-input-field' placeholder='  <%= I18n.t("questionnaire.find_employees") %>...' type='text' ng-model="search_input.text" typeahead="search_node.name for search_node in search_list() | nameStartWith:$viewValue | limitTo:10"  typeahead-on-select='select_worker($item, true)'/>
+          <input class='search-input-field' placeholder="  {{mobile_app_service.t('search')}}..." type='text' ng-model="search_input.text" typeahead="search_node.name for search_node in search_list() | nameStartWith:$viewValue | limitTo:10"  typeahead-on-select='select_worker($item, true)'/>
         </div>
         <div class='selected-employees'>
           <div class='pillbox-wrapper' ng-repeat='worker in replies'>
