--- a/app/assets/templates/mobile/first_enter.jst.ejs.erb
+++ b/app/assets/templates/mobile/first_enter.jst.ejs.erb
@@ -3,25 +3,25 @@
   <div class='mobile-content' id="main_container" >
     <div class='page_content'>
       <div class="welcome-message" style='width: {{container_width}}; height: {{container_height}}' >
-        <h1 class='page_title' dir='rtl'><%= I18n.t('questionnaire.hi') %> {{mobile_app_service.getUserName()}}</h1>
-        <div class="text_rtl" dir='rtl'><%= I18n.t('questionnaire.how_to_answer_html') %></div>
+        <h1 class='page_title' dir='rtl'>{{mobile_app_service.t('hi')}}<%#= I18n.t('questionnaire.hi') %> {{mobile_app_service.getUserName()}}</h1>
+        <div class="text_rtl" dir='rtl' ng-bind-html="mobile_app_service.t('how_to_answer_html')"><%#= I18n.t('questionnaire.how_to_answer_html') %></div>
         <div class="gestures">
           <div class="gesture-line">
             <img class="gesture_img_left" src="<%= asset_path 'gestures_tap.png' %>" alt="tap" >
-            <div class="gesture_text_right_rtl tap" dir='rtl'>
-              <%= I18n.t('questionnaire.how_to_tap_html') %>
+            <div class="gesture_text_right_rtl tap" dir='rtl' ng-bind-html="mobile_app_service.t('how_to_tap_html')">
+              <%#= I18n.t('questionnaire.how_to_tap_html') %>
               <br><br>
-              <b><%= I18n.t('questionnaire.or') %></b>
+              <b>{{mobile_app_service.t('or')}}<%#= I18n.t('questionnaire.or') %></b>
             </div>
           </div>
           <div class="gesture-line">
             <img class="gesture_img_right" src="<%= asset_path 'gestures_swipe.png' %>" alt="swipe">
-            <div class="gesture_text_left_rtl swipe" dir='rtl'> <%= I18n.t('questionnaire.how_to_swipe_html') %> </div>
+            <div class="gesture_text_left_rtl swipe" dir='rtl' ng-bind-html="mobile_app_service.t('how_to_swipe_html')"> <%#= I18n.t('questionnaire.how_to_swipe_html') %> </div>
           </div>
           <div class="gesture-line">
             <img class="gesture_img_left" src="<%= asset_path 'gestures_scroll.png' %>" alt="scroll">
-            <div class="gesture_text_right_rtl scroll_rtl" dir='rtl'>
-              <%= I18n.t('questionnaire.how_to_scroll_html') %>
+            <div class="gesture_text_right_rtl scroll_rtl" dir='rtl' ng-bind-html="mobile_app_service.t('how_to_scroll_html')">
+              <%#= I18n.t('questionnaire.how_to_scroll_html') %>
             </div>
           </div>
         </div>
@@ -30,7 +30,7 @@
   </div>
   <div class='mobile-footer'>
     <div class='mobile-btns-container'>
-      <div class='center-button' ng-click='mobile_app_service.setQuestionnaireView()'><%= I18n.t('questionnaire.continue_button') %> </div>
+      <div class='center-button' ng-click='mobile_app_service.setQuestionnaireView()'>{{mobile_app_service.t('continue_button')}}<%#= I18n.t('questionnaire.continue_button') %> </div>
     </div>
   </div>
 </div>
@@ -38,27 +38,27 @@
   <div class='mobile-content' id="main_container" >
     <div class='page_content'>
       <div class="welcome-message" style='width: {{container_width}}; height: {{container_height}}'>
-        <h1 class='page_title' ><%= I18n.t('questionnaire.hi') %> {{mobile_app_service.getUserName()}}</h1>
-        <div class="text" >
-           <%= I18n.t('questionnaire.how_to_answer_html') %>
+        <h1 class='page_title' >{{mobile_app_service.t('hi')}}<%#= I18n.t('questionnaire.hi') %> {{mobile_app_service.getUserName()}}</h1>
+        <div class="text" ng-bind-html="mobile_app_service.t('how_to_answer_html')">
+           <%#= I18n.t('questionnaire.how_to_answer_html') %>
         </div>
         <div class="gestures">
           <div class="gesture-line">
             <img class="gesture_img_left" src="<%= asset_path 'gestures_tap.png' %>" alt="tap">
-            <div class="gesture_text_right tap" >
-              <%= I18n.t('questionnaire.how_to_tap_html') %>
+            <div class="gesture_text_right tap" ng-bind-html="mobile_app_service.t('how_to_tap_html')">
+              <%#= I18n.t('questionnaire.how_to_tap_html') %>
               <br><br>
-              <b><%= I18n.t('questionnaire.or') %></b>
+              <b>{{mobile_app_service.t('or')}}<%#= I18n.t('questionnaire.or') %></b>
             </div>
           </div>
           <div class="gesture-line">
             <img class="gesture_img_right" src="<%= asset_path 'gestures_swipe.png' %>" alt="swipe">
-            <div class="gesture_text_left swipe"> <%= I18n.t('questionnaire.how_to_swipe_html') %> </div>
+            <div class="gesture_text_left swipe" ng-bind-html="mobile_app_service.t('how_to_swipe_html')"><%#= I18n.t('questionnaire.how_to_swipe_html') %> </div>
           </div>
           <div class="gesture-line">
             <img class="gesture_img_left" src="<%= asset_path 'gestures_scroll.png' %>" alt="scroll">
-            <div class="gesture_text_right scroll">
-              <%= I18n.t('questionnaire.how_to_scroll_html') %>
+            <div class="gesture_text_right scroll" ng-bind-html="mobile_app_service.t('how_to_scroll_html')">
+              <%#= I18n.t('questionnaire.how_to_scroll_html') %>
             </div>
           </div>
         </div>
@@ -67,7 +67,7 @@
   </div>
   <div class='mobile-footer'>
     <div class='mobile-btns-container'>
-      <div class='center-button' ng-click='mobile_app_service.setQuestionnaireView()'><%= I18n.t('questionnaire.continue_button') %> </div>
+      <div class='center-button' ng-click='mobile_app_service.setQuestionnaireView()'>{{mobile_app_service.t('continue_button')}}<%#= I18n.t('questionnaire.continue_button') %> </div>
     </div>
   </div>
 </div>
