--- a/app/views/application/desk.html.erb
+++ b/app/views/application/desk.html.erb
@@ -1,1 +1,1 @@
-<div ng-controller="desktopClientController" ng-init="init('<%= @name %>','<%= @token %>')" ng-include="getInclude()"> </div>
+<div ng-controller="desktopClientController" ng-init="init('<%= @name %>','<%= @token %>',<%= @dict %>)" ng-include="getInclude()"> </div>
