--- a/app/assets/stylesheets/mobile/welcome_back.scss
+++ b/app/assets/stylesheets/mobile/welcome_back.scss
@@ -19,7 +19,7 @@ body{
       .mobile-interact-page{
         .mobile-header {
           .mobile-header-title {
-            text-align: right !important;
+            text-align: right;
           }
         }
       }
