--- a/app/assets/stylesheets/mobile/mobile.scss
+++ b/app/assets/stylesheets/mobile/mobile.scss
@@ -117,36 +117,49 @@
     left: 0;
     margin: auto;
     .mobile-header {
-      background-color: #6892b7;
-      height: 140px;
+      background-color: black;
+      height: 14rem;
       position: absolute;
       top: 0;
       width: 100%;
       z-index: 100;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       .header-text {
-        box-sizing: border-box;
-        float: left;
+        /*box-sizing: border-box;*/
+        /*float: left;*/
         color: #fff;
         /*font-size: 45px;*/
-        font-size: 30pt;
-        line-height: 140px;
+        font-size: 35pt;
+        line-height: 1.5;
         text-shadow: 0 1px 1px rgba(0, 0, 1, 0.19);
+        font-weight: 550;
       }
       .mobile-header-page-num {
         @extend .header-text;
-        border-left: 1px solid #9ec2e2;
-        border-right: 1px solid #41698d;
-        text-align: center;
-        width: 11%;
+        /*border-left: 1px solid #9ec2e2;*/
+        /*border-right: 1px solid #41698d;*/
+        /*text-align: center;*/
+        width: 7%;
+        padding: 2.3rem;
+     /*   position: absolute;
+        top: 50%;*/
       }
       .mobile-header-title {
         @extend .header-text;
-        border-right: 1px solid #41698d;
-        padding: 0 20px 0 20px;
-        /*width: 678px;*/
-        width: 80%;
-        white-space: nowrap;
-        overflow: hidden;
+        /*border-right: 1px solid #41698d;*/
+        padding: 1.3rem;
+        width: 87%;
+        /*white-space: nowrap;*/
+        /*overflow: hidden;*/
+        /*font-size: 35pt;*/
+        /*line-height: 1.5;*/
+        /*position: relative;*/
+
+      }
+      .mobile-header-title.ltr{
+        text-align: left !important;
       }
       .mobile_search_click {
         @extend .header-text;
@@ -163,6 +176,7 @@
       left: 0;
       right: 0;
       box-sizing: border-box;
+      height: 100%;
       .question-instruction-tooltip {
         .full-question-blocker-show {
           font-size: 40px;
@@ -181,11 +195,11 @@
           position: absolute;
           background-color: #fff;
           font-size: 48px;
-          padding: 30px;
-          padding-bottom: 20px;
+          padding: 4rem;
           z-index: 11;
           top: -1000px;
           width: 100%;
+          border-radius: 0 0 30px 30px;
           -webkit-transition: 0.5s;
           -moz-transition: 0.5s;
           transition: 0.5s;
@@ -195,20 +209,22 @@
           }
           .close-btn {
             position: relative;
-            width: 240px;
             text-align: center;
-            border: 2px solid #262b3f;
-            left: 50%;
-            margin-left: -111px;
-            margin-top: 15px;
-            border-radius: 8px;
-            height: 60px;
-            padding-top: 20px;
+            left: 47%;
+            margin: 0;
+            bottom: -100px;
+          }
+          .close-q-container{
+            background-image: image-url('x_idle.png');
+            background-repeat: no-repeat;
+            background-size: 100%;
+            height: 90px;
+            width: 90px;
           }
         }
         .question-container-display {
-          top: 135px;
-          width: 93%;
+          top: 14rem;
+          box-sizing: border-box;
         }
       }
       .page_content {
@@ -250,18 +266,90 @@
         }
       }
     }
+    .search-result{
+      position: absolute;
+      bottom: 140px;
+      display: block;
+      max-height: 55%;
+      padding-bottom: 3rem;
+      margin-bottom: -30px;
+      /* top: 91.2031px; */
+      /* left: 373.422px; */
+      background-color: white;
+      width: 100%;
+      /*margin: 0;*/
+      left: 0 !important;
+      top:unset !important;
+      right: 0;
+      overflow: scroll;
+      border-radius: 30px 30px 0 0;
+      /*z-index: 11;*/
+      .search-item{
+        padding: 2rem;
+        margin: 0 2rem 0 2rem;
+        line-height: 1.5;
+        border-bottom: 2px solid gray;
+        font-size:35pt;
+        /*font-size: 20pt;*/
+/*        font-size: 35pt;*/
+        .avatar-search{
+          background-image: image-url('avatar-for-logout-menu.png');
+          background-repeat: no-repeat;
+          background-size: 100%;
+          height: 100px;
+          width: 100px;
+          float:right;
+
+        }
+        .search-emp-name {
+          width: 85%;
+          text-align: right;
+          .emp-name{
+            font-weight: bold;
+          }
+        }
+      }
+      .search-item.ltr{
+        .avatar-search{
+          float: left !important;
+          margin-right: 2rem !important;
+        }
+        .search-emp-name{
+          text-align:left !important;
+          margin: auto !important;
+        }
+      }
+      .close-q-container{
+        background-image: image-url('x_idle.png');
+        background-repeat: no-repeat;
+        background-size: 100%;
+        height: 90px;
+        width: 90px;
+        margin: auto;
+        left: 0;
+        right: 0;
+        margin-top: -50px;
+        position: fixed;
+      }
+
+    }
+
     .mobile-footer {
       position: absolute;
       height: 140px;
       bottom: 0;
       right: 0;
       left: 0;
-      background-color: #262b3f;
-      .mobile-btns-container {
+      background-color: black;
+      .mobile-btns-container.rtl {
         bottom: 0px;
-        height: 120px;
         position: absolute;
         width: 100%;
+        font-size: 35pt;
+        height: 64%;
+        line-height: 2;
+        top: 18%;
+        text-align: center;
         .footer-buttons {
           height: 80px;
           margin: 5px 0;
@@ -272,15 +360,99 @@
           text-align: center;
           font-size: 50px;
           border: 2px solid white;
-          color: white;
+          /*color: white;*/
         }
-        .left-button {
-          @extend .footer-buttons;
-          float: left;
+        .counter-btn {
+          /*@extend .footer-buttons;*/
+          border: 2px solid #6f7990;
+          color: #6f7990;
+          background-color: #1a1e2c;
+          width: 30%;
+          margin-left: 1rem;
+          height: 100%;   
+          color:white;    
+          i {
+            float: left;
+            line-height: 80px;
+            font-size: 50px;
+            padding: 0px 15px 0 25px;
+            border-left: 2px solid white;
+          }
         }
-        .right-button {
-          @extend .footer-buttons;
+        .right-search-input{
+          background-color: black;
           float: right;
+          width: 60%;
+          margin-right: 1rem;
+          height: 100%;
+          input{
+            border: 3px solid white;
+            background-color: black;
+            height: 100%;
+            color:white;
+            width:100%;
+            font-size: 35pt;
+            direction: rtl;
+            padding-right: 1.5rem;
+            box-sizing: border-box;
+          }
+        }
+        .search-btn {
+          /*@extend .footer-buttons;*/
+          float: right;
+          background-color: orange;
+          border: none;
+          width: 60%;
+          margin-right: 1rem;
+          height: 100%;
+        }
+        .disabled {
+          border: 2px solid rgb(111, 121, 144);
+          color: rgb(111, 121, 144);
+          background-color: rgb(26, 30, 44);
+        }
+        .finished {
+          background-color: rgb(25, 125, 186);
+        }
+        .rtl {
+          -moz-transform: scale(-1, 1);
+          -webkit-transform: scale(-1, 1);
+          -o-transform: scale(-1, 1);
+          -ms-transform: scale(-1, 1);
+          transform: scale(-1, 1);
+        }
+      }
+      .mobile-btns-container.ltr {
+        bottom: 0px;
+        position: absolute;
+        width: 100%;
+        font-size: 35pt;
+        height: 64%;
+        line-height: 2;
+        top: 18%;
+        text-align: center;
+        .footer-buttons {
+          height: 80px;
+          margin: 5px 0;
+          position: relative;
+          width: 370px;
+          border-radius: 8px;
+          line-height: 75px;
+          text-align: center;
+          font-size: 50px;
+          border: 2px solid white;
+          /*color: white;*/
+        }
+        .counter-btn {
+          /*@extend .footer-buttons;*/
+          border: 2px solid #6f7990;
+          color: #6f7990;
+          background-color: #1a1e2c;
+          width: 30%;
+          margin-right: 1rem;
+          height: 100%;   
+          color:white; 
+          float: right;   
           i {
             float: right;
             line-height: 80px;
@@ -289,6 +461,70 @@
             border-left: 2px solid white;
           }
         }
+        .right-search-input{
+          background-color: black;
+          float: left;
+          width: 60%;
+          margin-left: 1rem;
+          height: 100%;
+          input{
+            border: 3px solid white;
+            background-color: black;
+            height: 100%;
+            color:white;
+            width:100%;
+            font-size: 35pt;
+            direction: ltr;
+            padding-left: 1.5rem;
+            box-sizing: border-box;
+          }
+        }
+        .search-btn {
+          /*@extend .footer-buttons;*/
+          float: left;
+          background-color: orange;
+          border: none;
+          width: 60%;
+          margin-left: 1rem;
+          height: 100%;
+          i {
+            float: right;
+            line-height: 80px;
+            font-size: 50px;
+            padding: 0px 15px 0 25px;
+            border-left: 2px solid white;
+          }
+        }
+        .disabled {
+          border: 2px solid rgb(111, 121, 144);
+          color: rgb(111, 121, 144);
+          background-color: rgb(26, 30, 44);
+        }
+        .finished {
+          background-color: rgb(25, 125, 186);
+        }
+        .rtl {
+          -moz-transform: scale(-1, 1);
+          -webkit-transform: scale(-1, 1);
+          -o-transform: scale(-1, 1);
+          -ms-transform: scale(-1, 1);
+          transform: scale(-1, 1);
+        }
+      }
+      .mobile-btns-container{
+        .footer-buttons {
+          height: 80px;
+          margin: 5px 0;
+          position: relative;
+          width: 370px;
+          border-radius: 8px;
+          line-height: 75px;
+          text-align: center;
+          font-size: 50px;
+          border: 2px solid white;
+          /*color: white;*/
+        }
+
         .center-button {
           @extend .footer-buttons;
           height: 90px;
@@ -331,7 +567,9 @@
           -ms-transform: scale(-1, 1);
           transform: scale(-1, 1);
         }
+
       }
+
     }
     .mobile-content.finish-question{
         bottom: 0 !important;
