--- a/app/assets/templates/mobile/welcome_back.jst.ejs.erb
+++ b/app/assets/templates/mobile/welcome_back.jst.ejs.erb
@@ -1,10 +1,10 @@
 <div ng-if="mobile_app_service.isLangRtl()" dir='rtl' class='mobile-interact-page welcome-back-page-warper' ng-controller="mobileQuestionnaireController" ng-init="init()" >
   <div class="mobile-header">
-    <div class="mobile-header-title"  ng-bind-html='r.question_title'></div>
     <div class="mobile-header-page-num">
       {{mobile_app_service.getIndexOfCurrentQuestion()}}/{{mobile_app_service.getTotalQuestions()}}
     </div>
-    <div class="mobile_search_click" ng-click='toggleFullQuestionView()'>Q</div>
+    <div class="mobile-header-title"  ng-bind-html='r.question_title'></div>
+    <!-- <div class="mobile_search_click" ng-click='toggleFullQuestionView()'>Q</div> -->
   </div>
 
   <div class='mobile-content' id="main_container">
@@ -45,6 +45,13 @@
 </div>
 
 <div ng-if="!mobile_app_service.isLangRtl()" class='mobile-interact-page welcome-back-page-warper' ng-controller="mobileQuestionnaireController" ng-init="init()" >
+  <div class="mobile-header">
+    <div class="mobile-header-page-num">
+      {{mobile_app_service.getIndexOfCurrentQuestion()}}/{{mobile_app_service.getTotalQuestions()}}
+    </div>
+    <div class="mobile-header-title ltr"  ng-bind-html='r.question_title'></div>
+    <!-- <div class="mobile_search_click" ng-click='toggleFullQuestionView()'>Q</div> -->
+  </div>
   <div class='mobile-content' id="main_container">
     <div class='page_content welcome mobile-interact-page-content'>
       <div class="large-logo-mobile">
