--- a/app/assets/stylesheets/mobile/questionnaire.scss
+++ b/app/assets/stylesheets/mobile/questionnaire.scss
@@ -1,8 +1,8 @@
 .mobile-wrapper {
   .mobile-container {
     .questionnaire {
-      .zoom {
-        img {
+      .zoom-avatar {
+        .mobile-avatars {
           -webkit-transform: scale(2.3);
           transform: scale(2.3);
           -webkit-transition: all 0.2s cubic-bezier(0.055, 0.710, 0.725, 0.825);
@@ -121,13 +121,14 @@
           -webkit-transition: all 0.5s;
           transition: all 0.5s;
           left: 0;
-          img.mobile-avatars {
+          .mobile-avatars {
             margin: auto;
             display: block;
             position: relative;
             width: 300px;
             height: 300px;
             border: 2px solid rgb(208, 214, 226);
+            background-color: white;
           }
           .mobile-liking-btns {
             height: 80px;
@@ -170,6 +171,20 @@
             &:active, &.activated {
               background-color: rgb(104, 146, 183);
             }
+          }
+          .ciricle-avatar{
+            background-color: yellow;
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            text-align: center;
+            font-size: 70pt;
+            justify-content: center;
+            margin: auto;
+            margin-top: 10%;
+            color:white;
+            font-weight: bold;
+            line-height: 200px;
           }
           .mobile-like-btn {
             @extend .mobile-liking-btns;
