search avatars css

--- a/app/assets/stylesheets/mobile/mobile.scss
+++ b/app/assets/stylesheets/mobile/mobile.scss
@@ -306,6 +306,8 @@
           background-color: yellow;
           line-height: 120px;
           text-align: center;
+          color: white;
+          font-weight: bold;
 
         }
         .search-emp-name {
