--- a/app/assets/stylesheets/mobile/mobile.scss
+++ b/app/assets/stylesheets/mobile/mobile.scss
@@ -270,25 +270,27 @@
       position: absolute;
       bottom: 140px;
       display: block;
-      max-height: 75%;
+      max-height: calc(100% -14rem);
+      max-height: -webkit-calc(98% - 140px - 14rem);
       padding-bottom: 3rem;
-      margin-bottom: -30px;
+      /*margin-bottom: -30px;*/
       /* top: 91.2031px; */
       /* left: 373.422px; */
       background-color: white;
       width: 100%;
       /*margin: 0;*/
       left: 0 !important;
-      top:unset !important;
+      margin-top: 14rem !important;
       right: 0;
       overflow: scroll;
       border-radius: 30px 30px 0 0;
+      z-index: 200;
       /*z-index: 11;*/
       .search-item{
         align-items: center;
         display: flex;
         flex-direction: row-reverse;
-        padding: 2rem;
+        padding: 1rem;
         margin: 0 1rem 0 1rem;
         line-height: 1.5;
         border-bottom: 2px solid gray;
@@ -329,6 +331,12 @@
           text-align:left !important;
           margin: auto !important;
         }
+      }
+      .search-item.no-results,
+      .search-item.ltr.no-results{
+        flex-direction: column;
+        border:none;
+        margin-top: 1.5rem;
       }
       .close-q-container{
         background-image: image-url('x_idle.png');
